# TASK-127

./: .gitignore  metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md  test-traceability.md
repo/: README.md  docker-compose.yml  run_tests.sh
repo/desktop/: CMakeLists.txt  Dockerfile
repo/desktop/api_tests/: CMakeLists.txt  tst_api_bootstrap.cpp  tst_audit_integration.cpp  tst_auth_integration.cpp  tst_checkin_flow.cpp  tst_correction_flow.cpp  tst_export_flow.cpp  tst_operator_workflows.cpp  tst_package_verification.cpp  tst_privileged_scope.cpp  tst_schema_constraints.cpp  tst_shell_recovery.cpp  tst_sync_import_flow.cpp  tst_update_flow.cpp
repo/desktop/database/fixtures/: README.md
repo/desktop/database/migrations/: 0001_initial_schema.sql  0002_identity_schema.sql  0003_member_schema.sql  0004_checkin_schema.sql  0005_question_schema.sql  0006_ingestion_schema.sql  0007_sync_schema.sql  0008_audit_schema.sql  0009_crypto_trust_schema.sql  0010_update_schema.sql  0011_export_compliance_schema.sql  0012_workspace_schema.sql  0013_checkin_duplicate_guard_schema.sql  0014_sync_conflict_resolution_linkage.sql  0015_sync_entity_apply_status.sql
repo/desktop/resources/: resources.qrc
repo/desktop/src/: CMakeLists.txt  main.cpp
repo/desktop/src/app/: ActionRouter.cpp  ActionRouter.h  AppBootstrap.cpp  AppBootstrap.h  AppContext.cpp  AppContext.h  AppSettings.cpp  AppSettings.h  Application.cpp  Application.h  WorkspaceState.cpp  WorkspaceState.h
repo/desktop/src/crypto/: AesGcmCipher.cpp  AesGcmCipher.h  Argon2idHasher.cpp  Argon2idHasher.h  Ed25519Signer.cpp  Ed25519Signer.h  Ed25519Verifier.cpp  Ed25519Verifier.h  HashChain.cpp  HashChain.h  IKeyStore.h  KeyStore.cpp  KeyStore.h  SecureRandom.cpp  SecureRandom.h
repo/desktop/src/dialogs/: CommandPaletteDialog.cpp  CommandPaletteDialog.h  QuestionEditorDialog.cpp  QuestionEditorDialog.h  StepUpDialog.cpp  StepUpDialog.h
repo/desktop/src/models/: Audit.h  CheckIn.h  CommonTypes.cpp  CommonTypes.h  Ingestion.h  Member.h  Question.h  Sync.h  Update.h  User.h
repo/desktop/src/repositories/: AuditRepository.cpp  AuditRepository.h  CheckInRepository.cpp  CheckInRepository.h  IAuditRepository.h  ICheckInRepository.h  IIngestionRepository.h  IMemberRepository.h  IQuestionRepository.h  ISyncRepository.h  IUpdateRepository.h  IUserRepository.h  IngestionRepository.cpp  IngestionRepository.h  KnowledgePointRepository.cpp  KnowledgePointRepository.h  MemberRepository.cpp  MemberRepository.h  QuestionRepository.cpp  QuestionRepository.h  SyncRepository.cpp  SyncRepository.h  UpdateRepository.cpp  UpdateRepository.h  UserRepository.cpp  UserRepository.h
repo/desktop/src/scheduler/: JobScheduler.cpp  JobScheduler.h
repo/desktop/src/services/: AuditService.cpp  AuditService.h  AuthService.cpp  AuthService.h  CheckInService.cpp  CheckInService.h  DataSubjectService.cpp  DataSubjectService.h  IngestionService.cpp  IngestionService.h  PackageVerifier.cpp  PackageVerifier.h  QuestionService.cpp  QuestionService.h  SyncService.cpp  SyncService.h  UpdateService.cpp  UpdateService.h
repo/desktop/src/tray/: TrayManager.cpp  TrayManager.h
repo/desktop/src/utils/: CaptchaGenerator.cpp  CaptchaGenerator.h  ClipboardGuard.cpp  ClipboardGuard.h  ErrorFormatter.cpp  ErrorFormatter.h  Logger.cpp  Logger.h  MaskingPolicy.cpp  MaskingPolicy.h  Migration.cpp  Migration.h  PerformanceObserver.cpp  PerformanceObserver.h  Result.h  Validation.h
repo/desktop/src/widgets/: BarcodeInput.cpp  BarcodeInput.h  MaskedFieldWidget.cpp  MaskedFieldWidget.h
repo/desktop/src/windows/: AuditViewerWindow.cpp  AuditViewerWindow.h  CheckInWindow.cpp  CheckInWindow.h  DataSubjectWindow.cpp  DataSubjectWindow.h  IngestionMonitorWindow.cpp  IngestionMonitorWindow.h  LoginWindow.cpp  LoginWindow.h  MainShell.cpp  MainShell.h  QuestionBankWindow.cpp  QuestionBankWindow.h  SecurityAdminWindow.cpp  SecurityAdminWindow.h  SyncWindow.cpp  SyncWindow.h  UpdateWindow.cpp  UpdateWindow.h
repo/desktop/unit_tests/: AppContextTestTypes.h  CMakeLists.txt  tst_action_routing.cpp  tst_app_bootstrap.cpp  tst_app_context.cpp  tst_app_settings.cpp  tst_application.cpp  tst_audit_chain.cpp  tst_audit_service.cpp  tst_audit_viewer.cpp  tst_auth_service.cpp  tst_barcode_input.cpp  tst_bootstrap.cpp  tst_captcha_generator.cpp  tst_checkin_service.cpp  tst_checkin_window.cpp  tst_clipboard_guard.cpp  tst_command_palette.cpp  tst_crash_recovery.cpp  tst_crypto.cpp  tst_data_subject_service.cpp  tst_data_subject_window.cpp  tst_domain_validation.cpp  tst_ed25519_signer.cpp  tst_error_formatter.cpp  tst_ingestion_monitor_window.cpp  tst_ingestion_service.cpp  tst_job_checkpoint.cpp  tst_job_scheduler.cpp  tst_key_store.cpp  tst_logger.cpp  tst_login_window.cpp  tst_main_entrypoint.cpp  tst_main_shell.cpp  tst_masked_field.cpp  tst_masked_field_widget.cpp  tst_migration.cpp  tst_package_verifier.cpp  tst_performance_observer.cpp  tst_privileged_scope.cpp  (+12 more)
